--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,7 @@ header{
 #web-words{
 	padding-left: 30%;
 	width: 50%;
+	text-align: center;
 }
 
 #web-words h1{
@@ -176,10 +177,10 @@ header{
 
 	#web-words{
 		padding: 0%;
-		justify-content:flex-end;
 		text-align: center;
-		align-items: center;
 	}
+
+	
 
 	#img_div{
 		display: flex;
@@ -206,3 +207,41 @@ header{
 	}
 }
 
+@media(max-width:500px){
+	body{
+		max-width: 500px;
+		padding: 0%;
+		margin: 0%;
+	}
+
+	nav{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+	}
+
+	nav a {
+		border: black solid 1px;
+		width: 100%;
+		text-align: center;
+		padding: 3%;
+	}
+
+	#web-words{
+		box-sizing: border-box;
+		font-size: 80%;
+	}
+
+
+	#container1{
+		display: flex;
+		flex-direction: column;
+	}
+
+	#container2{
+		display: flex;
+		flex-direction: column;
+	}
+}
